--- a/SD.Allen.Frontend/v1.0/component/SDContentsTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/SDContentsTemplate.html
@@ -26,7 +26,7 @@
             <img src="logo.png" />
         </div>
     </div>
-    <div class="sd-section-content" style="margin:0 120px 0 120px;">
+    <div class="sd-section-content" style="margin:50px 120px 0 120px;">
         <ul class="nav nav-pills">
             <li>
                 <div style="height:160px;width:160px;background-color:#32B9B2;border-bottom:8px solid #2AD2C9;border-top:8px solid #2AD2C9;font-size:20px;display:table-cell;vertical-align:middle;text-align:center">
@@ -50,7 +50,7 @@
                 </div>
             </li>
             <li>
-                <div style="height:160px;width:160px;background-color:#32B9B2;border-bottom:8px solid #2AD2C9;border-top:8px solid #2AD2C9;color:#ffffff;font-size:20px;display:table-cell;vertical-align:middle;text-align:center">
+                <div data-toggle="collapse" href="#sd-section5" style="height:160px;width:160px;background-color:#32B9B2;border-bottom:8px solid #2AD2C9;border-top:8px solid #2AD2C9;color:#ffffff;font-size:20px;display:table-cell;vertical-align:middle;text-align:center">
                     Offering Design
                 </div>
             </li>
@@ -61,7 +61,7 @@
             </li>
             <li>
                 <div style="height:160px;width:160px;background-color:#32B9B2;border-bottom:8px solid #2AD2C9;border-top:8px solid #2AD2C9;color:#ffffff;font-size:20px;display:table-cell;vertical-align:middle;text-align:center">
-                    End-to-End T&T Solution
+                    End-to-End<br /> T&T<br /> Solution
                 </div>
             </li>
             <li>
@@ -79,7 +79,7 @@
     <div class="sd-section-menulist" style="margin:0 120px;">
         <ul class="nav nav-pills">
             <li>
-                <div style="min-height:160px;min-width:160px;">
+                <div style="min-height:160px;min-width:160px;">                    
                     
                 </div>
             </li>
@@ -112,7 +112,7 @@
             </li>
             <li>
                 <div style="height:160px;min-width:160px;">
-                    <ul class="collapse" id="sd-section4">
+                    <ul class="collapse nav nav-list" id="sd-section4">
                             <li>
                                 <a href="#">Scope</a>
                                 <ul>
@@ -187,7 +187,18 @@
                 </div>
             </li>
             <li>
-                <div style="height:160px;width:160px;">
+                <div style="height:160px;width:160px;padding-top:20px;">
+                    <ul class="collapse nav nav-list" id="sd-section5">
+                        <li>
+                            <label class="tree-toggler navbar-header">Header 1</label>
+                            <ul class="nav nav-list tree">
+                                <li><a href="#">Link</a></li>
+                                <li><a href="#">Link</a></li>
+                                <li><a href="#">Link</a></li>
+                                <li><a href="#">Link</a></li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
             </li>
             <li>
