--- a/SD.Allen.Frontend/v1.0/component/SDContentsTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/SDContentsTemplate.html
@@ -70,7 +70,7 @@
                 </div>
             </li>
             <li>
-                <div style="height:160px;width:160px;background-color:#32B9B2;border-bottom:8px solid #2AD2C9;border-top:8px solid #2AD2C9;color:#ffffff;font-size:20px;display:table-cell;vertical-align:middle;text-align:center">
+                <div>
                     Reference Documents
                 </div>
             </li>
