--- a/SD.Allen.Frontend/v1.0/component/SDContentsTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/SDContentsTemplate.html
@@ -29,43 +29,43 @@
     <div class="sd-section-content" style="margin:50px 120px 0 120px;">
         <ul class="nav nav-pills">
             <li>
-                <div style="height:160px;width:160px;background-color:#32B9B2;border-bottom:8px solid #2AD2C9;border-top:8px solid #2AD2C9;font-size:20px;display:table-cell;vertical-align:middle;text-align:center">
+                <div>
                     <!-- ko if: opptyID() != "" -->
                     <a data-bind="attr:{href:sdLoaderUrl+'?sid=0201&OpptyID=' + opptyID()}" style="color:#ffffff;">Opportunity Overview</a>
                     <!-- /ko -->
                 </div>
             </li>
             <li>
-                <div style="height:160px;width:160px;background-color:#32B9B2;border-bottom:8px solid #2AD2C9;border-top:8px solid #2AD2C9;color:#ffffff;font-size:20px;display:table-cell;vertical-align:middle;text-align:center">
+                <div>
                     <a style="color:#ffffff;" data-toggle="collapse" href="#sd-section3">
                         Business and Solution Context
                     </a>
                 </div>
             </li>
             <li>
-                <div style="height:160px;width:160px;background-color:#32B9B2;border-bottom:8px solid #2AD2C9;border-top:8px solid #2AD2C9;color:#ffffff;font-size:20px;display:table-cell;vertical-align:middle;text-align:center">
+                <div>
                     <a style="color:#ffffff;" data-toggle="collapse" href="#sd-section4">
                         Solution Overview
                     </a>
                 </div>
             </li>
             <li>
-                <div data-toggle="collapse" href="#sd-section5" style="height:160px;width:160px;background-color:#32B9B2;border-bottom:8px solid #2AD2C9;border-top:8px solid #2AD2C9;color:#ffffff;font-size:20px;display:table-cell;vertical-align:middle;text-align:center">
+                <div>
                     Offering Design
                 </div>
             </li>
             <li>
-                <div style="height:160px;width:160px;background-color:#32B9B2;border-bottom:8px solid #2AD2C9;border-top:8px solid #2AD2C9;color:#ffffff;font-size:20px;display:table-cell;vertical-align:middle;text-align:center">
+                <div>
                     Integrated Technical Architecture
                 </div>
             </li>
             <li>
-                <div style="height:160px;width:160px;background-color:#32B9B2;border-bottom:8px solid #2AD2C9;border-top:8px solid #2AD2C9;color:#ffffff;font-size:20px;display:table-cell;vertical-align:middle;text-align:center">
-                    End-to-End<br /> T&T<br /> Solution
+                <div>
+                 End-to-End<br /> T&T<br /> Solution
                 </div>
             </li>
             <li>
-                <div style="height:160px;width:160px;background-color:#32B9B2;border-bottom:8px solid #2AD2C9;border-top:8px solid #2AD2C9;color:#ffffff;font-size:20px;display:table-cell;vertical-align:middle;text-align:center">
+                <div>
                     Critical Risks, Assumptions and Mitigations
                 </div>
             </li>
@@ -79,7 +79,7 @@
     <div class="sd-section-menulist" style="margin:0 120px;">
         <ul class="nav nav-pills">
             <li>
-                <div style="min-height:160px;min-width:160px;">                    
+                <div style="">                    
                     
                 </div>
             </li>
