--- a/SD.Allen.Frontend/v1.0/component/AppHomeTemplate.html
+++ b/SD.Allen.Frontend/v1.0/component/AppHomeTemplate.html
@@ -1,38 +1,106 @@
-<div style="margin:0 auto;padding:0;height:768px;background:url('bg_home.jpg') repeat-x center center;background-color:#C6C9CA;">
-    <div class="panel">
-        <div class="panel-heading" style="min-height: 40px;background-color:#2AD2C9;">
-            <span style="float:left;">
-                <h4 style="color:white;">The Solution Source</h4>
-            </span>
-            <span style="float:right;">
-                <a href="SDMyOppty.aspx" class="btn btn-default btn-tip" style="margin-right: 10px;" title="View my opportunities">
-                    <img src="img/myoppty32.png" />
-                </a>
-            </span>
-            <span style="float:right;">
-                <a href="SDAllOppty.aspx" class="btn btn-default btn-tip" style="margin-right: 10px;" title="View all open opportunities">
-                    <img src="img/AllOppty32.png" />
-                </a>
-            </span>
-            <span style="float:right;">
-                <a class="btn btn-default btn-tip" href="SDSectionLoader.aspx?sid=0201" title="Create a new opportunity" style="margin-right: 10px;">
-                    <img src="img/newOppty32.png" />
-                </a>
-            </span>
+<div class="row" id="sd-home-container" style="background:url('bg_home.jpg');height:1013px;background-size:100% cover;">
+    <div style="height:70px;background:#2AD2C9;">
+        <div class="col-xs-12 col-md-6 col-lg-2 sd-auto-width" style="padding:15px 10px;">
+            <h1 style="color:#ffffff;">The Solution Source</h1>
         </div>
-
+        <div class="col-xs-1 col-md-2 col-lg-7 sd-auto-width" style="padding:30px 10px;">
+            <ul class="nav nav-pills home-nav">
+                <li>
+                    <a class="active" href="AppHome.aspx">Home</a>
+                </li>
+                <li>
+                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Help &amp; Reference</a>
+                    <ul class="dropdown-menu sd-dropdown-menu">
+                        <li><a href="FAQ.aspx" target="_blank">FAQ</a></li>
+                        <li><a href="Support%20Contacts.aspx" target="_blank">Support Contacts</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Opportunities</a>
+                    <ul class="dropdown-menu sd-dropdown-menu">
+                        <li><a href="SDSectionLoader.aspx?sid=0201" target="_blank">Create a new opportunity</a></li>
+                        <li><a href="SDMyOppty.aspx" target="_blank">My opportunities</a></li>
+                        <li><a href="SDAllOppty.aspx" target="_blank">All open opportunities</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <div class="col-xs-2 col-md-1 col-lg-2 pull-right">
+            <img src="logo.png" />
+        </div>
     </div>
-    <div class="row media-list" style="margin:0 auto;">
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1">Solution Design</div>
-        <div class="col-xs-1">Solution Design</div>
-        <div class="col-xs-1">Solution Design</div>
-        <div class="col-xs-1">Solution Design</div>
-        <div class="col-xs-1">Solution Design</div>
-        <div class="col-xs-1">Solution Design</div>
-        <div class="col-xs-1">Solution Design</div>
-        <div class="col-xs-1">Solution Design</div>
-        <div class="col-xs-1"></div>
-        <div class="col-xs-1"></div>
+    <div id="sd-section-content">
+        <ul class="nav nav-pills">
+            <li>
+                <div class="outlink">
+                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Solution Design</a>
+                    <ul class="dropdown-menu ss-dropdown-menu">
+                        <li><a href="SDMyOppty.aspx" target="_blank">My Opportunities</a></li>
+                        <li><a href="SDAllOppty.aspx" target="_blank">All Open Opportunities</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <div class="outlink">
+                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Configuration&amp; Costing</a>
+                    <ul class="dropdown-menu ss-dropdown-menu">
+                        <li><a href="http://c9w19663.itcs.hpecorp.net/PMD/" target="_blank">PMD</a></li>
+                        <li><a href="http://prime21.sharepoint.hp.com/teams/Apps%20Solutioning/Tools/SDT/SitePages/Home.aspx" target="_blank">SDT-Estimation, Configuration</a></li>
+                        <li><a href="http://kc-enterprise.sharepoint.hp.com/sites/kc7/general%20information%20restricted%20content/forms/folder%20view.aspx" target="_blank">ITO CMT</a></li>
+                        <li><a href="http://ent262.sharepoint.hp.com/teams/GSIDSPTPortal/Shared Documents/Forms/AllItems.aspx?RootFolder=%2Fteams%2FGSIDSPTPortal%2FShared%20Documents%2FMaster%20Tool%20List&FolderCTID=0x01200046CEC4FC70ADD248AFA8B5FF8A4ED602&View=%7b6E9304BE-EE36-4A96-AD7B-441606EC85AE%7d" target="_blank">ITO Cost Models (Master Tool List)</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <div class="outlink">
+                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Pricing</a>
+                    <ul class="dropdown-menu ss-dropdown-menu">
+                        <li><a href="http://ent71.sharepoint.hp.com/teams/E3T_1/public/home.aspx" target="_blank">E3T-Apps only</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <div class="outlink">
+                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Review &amp; Approvals</a>
+                    <ul class="dropdown-menu ss-dropdown-menu">
+                        <li><a href="https://ent301.sharepoint.hp.com/teams/GlobalDealTracker/SitePages/Home.aspx" target="_blank">GDT</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <div class="outlink">
+                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Pursuit Workflow</a>
+                    <ul class="dropdown-menu ss-dropdown-menu">
+                        <li><a href="http://intranet.hp.com/enterpriseservices/ww/SolutioningSalesSupport/Pages/page.aspx?n=n&q=PEP" target="_blank">PEP</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <div class="outlink">
+                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Solution Development Methodology</a>
+                    <ul class="dropdown-menu ss-dropdown-menu">
+                        <li><a href="http://intranet.hp.com/enterpriseservices/ww/SolutioningSalesSupport/Documents/Pursuit_Support_Model/PSM_L0_Master.swf" target="_blank">PSM</a></li>
+                        <li><a href="http://intranet.hp.com/enterpriseservices/ww/SolutioningSalesSupport/Pages/page.aspx?n=n&q=SalesSupportModel" target="_blank">SSM</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <div class="outlink">
+                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Knowledge Management</a>
+                    <ul class="dropdown-menu ss-dropdown-menu">
+                        <li><a href="https://grspro.itcs.hp.com/ius/" target="_blank">GRS</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <div class="outlink">
+                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Metrics &amp; Reporting</a>
+                    <ul class="dropdown-menu ss-dropdown-menu">
+                        <li><a href="https://www.soda.svcs.hpe.com/soto/web/landingpage" target="_blank">SODA</a></li>
+                        <li><a href="javascript:void(0);" style="color:gray;">Solution Design</a></li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
     </div>
 </div>
